--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <a href="#loja" class="nav-link">Loja</a>
               </li>
               <li class="nav-item">
-                <a href="#administrativo" class="nav-link">Administrativo</a>
+                <a href="adm.html" class="nav-link">Administrativo</a>
               </li>
 
               
