Finalizados os cards e o menu amd

--- a/adm.html
+++ b/adm.html
@@ -78,12 +78,16 @@
     <div class="container-adm">
       <div class="menu-lateral">
         <ul>
-          <li><a href="">MENU</a></li>
+          <li><a href="">Plano mercadológico</a></li>
           <li><a href="">MENU</a></li>
           <li><a href="">MENU</a></li>
           <li><a href="">MENU</a></li>
           <li><a href="">MENU</a></li>
         </ul>
+      </div>
+
+      <div class="conteudo-adm">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ullam, provident pariatur aliquid distinctio cupiditate dicta beatae id laudantium, vitae fugiat reprehenderit deleniti vero esse odio dolorum quibusdam? Nisi nemo alias vel rem minus recusandae eligendi suscipit quas cupiditate saepe molestiae accusantium dignissimos ut odit, soluta mollitia, provident sapiente obcaecati!
       </div>
 
 
