--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
           <!-- Card 1 -->
           <div class="col-md-4">
             <div class="card">
-              <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Imagem do produto 1">
+              <img src="./img/produtos/cateter.png" class="card-img-top" alt="Imagem do produto 1">
               <div class="card-body">
-                <h5 class="card-title">Produto 1</h5>
+                <h5 class="card-title">Catéter</h5>
                 <p class="card-text">Este é um ótimo produto com muitas funcionalidades incríveis.</p>
                 <p class="card-text"><strong>Preço: R$ 199,99</strong></p>
               </div>
@@ -189,9 +189,9 @@
           <!-- Card 2 -->
           <div class="col-md-4">
             <div class="card">
-              <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Imagem do produto 2">
+              <img src="./img/produtos/cotonete.png" class="card-img-top" alt="Imagem do produto 2">
               <div class="card-body">
-                <h5 class="card-title">Produto 2</h5>
+                <h5 class="card-title">Cotonete</h5>
                 <p class="card-text">Este produto oferece excelente desempenho e ótimo valor.</p>
                 <p class="card-text"><strong>Preço: R$ 299,99</strong></p>
               </div>
@@ -201,43 +201,76 @@
           <!-- Card 3 -->
           <div class="col-md-4">
             <div class="card">
-              <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Imagem do produto 3">
+              <img src="./img/produtos/luvaazul.png" class="card-img-top" alt="Imagem do produto 3">
               <div class="card-body">
-                <h5 class="card-title">Produto 3</h5>
+                <h5 class="card-title">Luvas cirurgicas</h5>
                 <p class="card-text">Este é um dos melhores produtos do mercado com preço acessível.</p>
                 <p class="card-text"><strong>Preço: R$ 399,99</strong></p>
               </div>
             </div>
           </div>
 
-          <!-- Card 3 -->
+          <!-- Card 4 -->
           <div class="col-md-4">
             <div class="card">
-              <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Imagem do produto 3">
+              <img src="./img/produtos/quepe2.png" class="card-img-top" alt="Imagem do produto 3">
               <div class="card-body">
-                <h5 class="card-title">Produto 3</h5>
+                <h5 class="card-title">Quepe</h5>
                 <p class="card-text">Este é um dos melhores produtos do mercado com preço acessível.</p>
                 <p class="card-text"><strong>Preço: R$ 399,99</strong></p>
               </div>
             </div>
           </div>
-          <!-- Card 3 -->
+          <!-- Card 5 -->
           <div class="col-md-4">
             <div class="card">
-              <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Imagem do produto 3">
+              <img src="./img/produtos/mascara.png" class="card-img-top" alt="Imagem do produto 3">
               <div class="card-body">
-                <h5 class="card-title">Produto 3</h5>
+                <h5 class="card-title">Máscara</h5>
                 <p class="card-text">Este é um dos melhores produtos do mercado com preço acessível.</p>
                 <p class="card-text"><strong>Preço: R$ 399,99</strong></p>
               </div>
             </div>
           </div>
-          <!-- Card 3 -->
+          <!-- Card 6 -->
           <div class="col-md-4">
             <div class="card">
-              <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Imagem do produto 3">
+              <img src="./img/produtos/seringa.png" class="card-img-top" alt="Imagem do produto 3">
               <div class="card-body">
-                <h5 class="card-title">Produto 3</h5>
+                <h5 class="card-title">Seringa</h5>
+                <p class="card-text">Este é um dos melhores produtos do mercado com preço acessível.</p>
+                <p class="card-text"><strong>Preço: R$ 399,99</strong></p>
+              </div>
+            </div>
+          </div>
+           <!-- Card 7 -->
+           <div class="col-md-4">
+            <div class="card">
+              <img src="./img/produtos/luvas.png" class="card-img-top" alt="Imagem do produto 3">
+              <div class="card-body">
+                <h5 class="card-title">Luvas</h5>
+                <p class="card-text">Este é um dos melhores produtos do mercado com preço acessível.</p>
+                <p class="card-text"><strong>Preço: R$ 399,99</strong></p>
+              </div>
+            </div>
+          </div>
+           <!-- Card 8 -->
+          <div class="col-md-4">
+            <div class="card">
+              <img src="./img/produtos/seringadois.png" class="card-img-top" alt="Imagem do produto 3">
+              <div class="card-body">
+                <h5 class="card-title">Seringa</h5>
+                <p class="card-text">Este é um dos melhores produtos do mercado com preço acessível.</p>
+                <p class="card-text"><strong>Preço: R$ 399,99</strong></p>
+              </div>
+            </div>
+          </div>
+           <!-- Card 9 -->
+           <div class="col-md-4">
+            <div class="card">
+              <img src="./img/produtos/quepe.png" class="card-img-top" alt="Imagem do produto 3">
+              <div class="card-body">
+                <h5 class="card-title">Quepe</h5>
                 <p class="card-text">Este é um dos melhores produtos do mercado com preço acessível.</p>
                 <p class="card-text"><strong>Preço: R$ 399,99</strong></p>
               </div>
