--- a/aspectos-mercadologicos.html
+++ b/aspectos-mercadologicos.html
@@ -45,10 +45,10 @@
               <a href="index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="#projeto" class="nav-link" id="">Projeto</a>
+              <a href="index.html" class="nav-link" id="">Projeto</a>
             </li>
             <li class="nav-item">
-              <a href="#loja" class="nav-link">Loja</a>
+              <a href="index.html" class="nav-link">Loja</a>
             </li>
             <li class="nav-item">
               <a href="aspectos-mercadologicos.html" class="nav-link">Administrativo</a>
@@ -72,19 +72,24 @@
         <li><img class="icon-folha" src="./img/icon-folha.png"><a href="./propagandaepromocao.html">Propaganda e
             Promoção</a></li>
         <hr>
-        <li><img class="icon-folha" src="./img/icon-folha.png"><a href="./aspectos-legais.html">Aspectos Legais</a></li>
+        <li><img class="icon-folha" src="./img/icon-folha.png"><a href="./aspectos-legais.html">Aspectos
+            Legais</a></li>
         <hr>
         <li><img class="icon-folha" src="./img/icon-folha.png"><a href="./plano-responsabilidade.html">Plano de
             responsabilidade social</a></li>
         <hr>
-        <li><img class="icon-folha" src="./img/icon-folha.png"><a href="./plano-operacional.html">Plano operacional</a>
-        </li>
+        <li><img class="icon-folha" src="./img/icon-folha.png"><a href="./plano-operacional.html">Plano
+            operacional</a></li>
         <hr>
         <li><img class="icon-folha" src="./img/icon-folha.png"><a href="./plano-organizacional.html">Plano
             organizacional</a></li>
         <hr>
-        <li><img class="icon-folha" src="./img/icon-folha.png"><a href="./identidade-visual.html">Identidade visual</a>
-        </li>
+        <li><img class="icon-folha" src="./img/icon-folha.png"><a href="./identidade-visual.html">Identidade
+            visual</a></li>
+        <hr>
+        <li><img class="icon-folha" src="./img/icon-folha.png"><a href="./prestacao-conta.html">CONTRATO DE
+            PRESTAÇÃO DE SERVIÇOS
+          </a></li>
       </ul>
     </div>
 
