--- a/index.html
+++ b/index.html
@@ -166,129 +166,159 @@
 
 
   <section class="loja" id="loja">
+
+    <!--/Início seção card -->
+    <div class="container mt-5">
+      <div class="row box-card">
+
+
+        <!-- Card 1 -->
+        <div class="col-md-4 ">
+          <div class="card">
+            <img src="./img/produtos/cateter.png" class="card-img-top" alt="Imagem do produto 3">
+            <div class="card-body">
+              <h5 class="card-title">Catéter Biodegradável (50 ml)</h5>
+              <p class="card-text">Feito de plástico biodegradável, este catéter de 50 ml é seguro, fácil de manusear e
+                ideal para drenagem e infusão. Ele se decompõe naturalmente, reduzindo o impacto ambiental, e permite um
+                descarte mais responsável após o uso.</p>
+
+            </div>
+          </div>
+        </div>
+        <!-- Card 2 -->
+        <div class="col-md-4">
+          <div class="card">
+            <img src="./img/produtos/cotonete.png" class="card-img-top" alt="Imagem do produto 3">
+            <div class="card-body">
+              <h5 class="card-title">Cotonete Biodegradável (25 ml)</h5>
+              <p class="card-text">Este cotonete é produzido com plástico biodegradável e possui uma estrutura leve,
+                ideal
+                para higiene pessoal. Com um volume de 25 ml, ele oferece eficácia e conforto na limpeza. O material é
+                seguro para a pele e se decompõe naturalmente após o uso, contribuindo para a redução de resíduos
+                plásticos no meio ambiente.</p>
+
+            </div>
+          </div>
+        </div>
+        <!-- Card 3 -->
+        <div class="col-md-4">
+          <div class="card">
+            <img src="./img/produtos/luvaazul.png" class="card-img-top" alt="Imagem do produto 3">
+            <div class="card-body">
+              <h5 class="card-title">Luvas Biodegradáveis (250 ml)</h5>
+              <p class="card-text">Este par de luvas é feito de plástico biodegradável, com capacidade total de 250
+                ml,
+                oferecendo proteção e conforto para uso em diversas atividades. O material é seguro para a pele e
+                proporciona flexibilidade e destreza. Após o uso, as luvas se decompõem naturalmente, ajudando a
+                reduzir
+                o
+                impacto ambiental e os resíduos plásticos.</p>
+
+            </div>
+          </div>
+        </div>
+
+        <!-- Card 4 -->
+        <div class="col-md-4">
+          <div class="card">
+            <img src="./img/produtos/quepe2.png" class="card-img-top" alt="Imagem do produto 3">
+            <div class="card-body">
+              <h5 class="card-title">Toucas Cirúrgicas Biodegradáveis (150 ml)</h5>
+              <p class="card-text">Estas toucas cirúrgicas são elaboradas com materiais biodegradáveis e têm uma
+                capacidade total de 150 ml. Projetadas para oferecer conforto e proteção, garantem a assepsia em
+                ambientes
+                médicos. O material é seguro e respirável, e se decompõe naturalmente após o uso, contribuindo para a
+                redução de resíduos plásticos e o impacto ambiental.</p>
+
+            </div>
+          </div>
+        </div>
+        <!-- Card 5 -->
+        <div class="col-md-4">
+          <div class="card">
+            <img src="./img/produtos/mascara.png" class="card-img-top" alt="Imagem do produto 3">
+            <div class="card-body">
+              <h5 class="card-title">Máscaras Biodegradáveis (125 ml)</h5>
+              <p class="card-text">Máscaras confeccionadas com materiais biodegradáveis e têm uma capacidade total de
+                125
+                ml. Desenvolvidas para proporcionar conforto e eficácia, oferecem proteção respiratória em diversas
+                situações. O material é seguro para a pele e se decompõe de forma natural após o uso, ajudando a
+                diminuir
+                o impacto ambiental e a quantidade de resíduos plásticos.</p>
+
+            </div>
+          </div>
+        </div>
+
+        <!-- Card 6 -->
+        <div class="col-md-4">
+          <div class="card">
+            <img src="./img/produtos/agulha.png" class="card-img-top" alt="Imagem do produto 3">
+            <div class="card-body">
+              <h5 class="card-title">Agulha Biodegradável (50 ml)</h5>
+              <p class="card-text">Com capacidade para 50 ml, nossa agulha é ideal para injeções e coletas de amostras.
+                O
+                design é ergonômico, garantindo facilidade de uso e segurança, além de ser biocompatível, minimizando
+                riscos de reações adversas. Após o uso, a agulha se decompõe naturalmente, contribuindo para a redução
+                de
+                resíduos plásticos na saúde.</p>
+
+            </div>
+          </div>
+        </div>
+
+        <!-- Card 8 -->
+        <div class="col-md-4">
+          <div class="card">
+            <img src="./img/produtos/seringadois.png" class="card-img-top" alt="Imagem do produto 3">
+            <div class="card-body">
+              <h5 class="card-title">Seringa Biodegradável (100 ml)</h5>
+              <p class="card-text">Nossa seringa possui a capacidade para 100 ml, adequada para administração de
+                medicamentos e extração. Seu design proporciona facilidade de uso e precisão na dosagem. O material é
+                biocompatível, reduzindo riscos de reações adversas. Após o uso, a seringa se decompõe naturalmente,
+                contribuindo para a diminuição de resíduos plásticos no meio ambiente.</p>
+
+            </div>
+          </div>
+        </div>
+      </div>
   </section>
-  <!--/Início seção card -->
-  <div class="container mt-5">
-    <div class="row box-card">
 
+  <footer class="mt-4 mb-4">
+    <div class="container  footer-box-m">
+      <div class="row ">
+        <div class="col-md-3">
 
-      <!-- Card 3 -->
-      <div class="col-md-4">
-        <div class="card">
-          <img src="./img/produtos/luvaazul.png" class="card-img-top" alt="Imagem do produto 3">
-          <div class="card-body">
-            <h5 class="card-title">Luvas Biodegradáveis (250 ml)</h5>
-            <p class="card-text">Este par de luvas é feito de plástico biodegradável, com capacidade total de 250
-              ml,
-              oferecendo proteção e conforto para uso em diversas atividades. O material é seguro para a pele e
-              proporciona flexibilidade e destreza. Após o uso, as luvas se decompõem naturalmente, ajudando a
-              reduzir
-              o
-              impacto ambiental e os resíduos plásticos.</p>
-
-          </div>
         </div>
-      </div>
-
-      <!-- Card 4 -->
-      <div class="col-md-4">
-        <div class="card">
-          <img src="./img/produtos/quepe2.png" class="card-img-top" alt="Imagem do produto 3">
-          <div class="card-body">
-            <h5 class="card-title">Toucas Cirúrgicas Biodegradáveis (150 ml)</h5>
-            <p class="card-text">Estas toucas cirúrgicas são elaboradas com materiais biodegradáveis e têm uma
-              capacidade total de 150 ml. Projetadas para oferecer conforto e proteção, garantem a assepsia em
-              ambientes
-              médicos. O material é seguro e respirável, e se decompõe naturalmente após o uso, contribuindo para a
-              redução de resíduos plásticos e o impacto ambiental.</p>
-
-          </div>
-        </div>
-      </div>
-      <!-- Card 5 -->
-      <div class="col-md-4">
-        <div class="card">
-          <img src="./img/produtos/mascara.png" class="card-img-top" alt="Imagem do produto 3">
-          <div class="card-body">
-            <h5 class="card-title">Máscaras Biodegradáveis (125 ml)</h5>
-            <p class="card-text">Máscaras confeccionadas com materiais biodegradáveis e têm uma capacidade total de
-              125
-              ml. Desenvolvidas para proporcionar conforto e eficácia, oferecem proteção respiratória em diversas
-              situações. O material é seguro para a pele e se decompõe de forma natural após o uso, ajudando a
-              diminuir
-              o impacto ambiental e a quantidade de resíduos plásticos.</p>
-
-          </div>
-        </div>
-      </div>
-
-      <!-- Card 6 -->
-      <div class="col-md-4">
-        <div class="card">
-          <img src="./img/produtos/agulha.png" class="card-img-top" alt="Imagem do produto 3">
-          <div class="card-body">
-            <h5 class="card-title">Seringa Biodegradável (100 ml)</h5>
-            <p class="card-text">Nossa seringa possui a capacidade para 100 ml, adequada para administração de
-              medicamentos e extração. Seu design proporciona facilidade de uso e precisão na dosagem. O material é
-              biocompatível, reduzindo riscos de reações adversas. Após o uso, a seringa se decompõe naturalmente,
-              contribuindo para a diminuição de resíduos plásticos no meio ambiente.</p>
-
-          </div>
-        </div>
-      </div>
-
-      <!-- Card 8 -->
-      <div class="col-md-4">
-        <div class="card">
-          <img src="./img/produtos/seringadois.png" class="card-img-top" alt="Imagem do produto 3">
-          <div class="card-body">
-            <h5 class="card-title">Seringa Biodegradável (100 ml)</h5>
-            <p class="card-text">Nossa seringa possui a capacidade para 100 ml, adequada para administração de
-              medicamentos e extração. Seu design proporciona facilidade de uso e precisão na dosagem. O material é
-              biocompatível, reduzindo riscos de reações adversas. Após o uso, a seringa se decompõe naturalmente,
-              contribuindo para a diminuição de resíduos plásticos no meio ambiente.</p>
-
-          </div>
+        <div class="col-md-4 d-flex justify-content-end">
+          <a href="" class="btn btn-outline-dark">
+            <i class="fab fa-facebook"></i>
+          </a>
+          <a href="" class="btn btn-outline-dark ml-2">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="" class="btn btn-outline-dark ml-2">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="" class="btn btn-outline-dark ml-2">
+            <i class="fab fa-youtube"></i>
+          </a>
         </div>
       </div>
     </div>
-    </section>
+  </footer>
 
-    <footer class="mt-4 mb-4">
-      <div class="container  footer-box-m">
-        <div class="row ">
-          <div class="col-md-3">
-
-          </div>
-          <div class="col-md-4 d-flex justify-content-end">
-            <a href="" class="btn btn-outline-dark">
-              <i class="fab fa-facebook"></i>
-            </a>
-            <a href="" class="btn btn-outline-dark ml-2">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="" class="btn btn-outline-dark ml-2">
-              <i class="fab fa-instagram"></i>
-            </a>
-            <a href="" class="btn btn-outline-dark ml-2">
-              <i class="fab fa-youtube"></i>
-            </a>
-          </div>
-        </div>
-      </div>
-    </footer>
-
-    <!-- JavaScript (Opcional) -->
-    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-      crossorigin="anonymous"></script>
+  <!-- JavaScript (Opcional) -->
+  <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
