--- a/plano-operacional.html
+++ b/plano-operacional.html
@@ -45,10 +45,10 @@
                             <a href="index.html" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#projeto" class="nav-link" id="">Projeto</a>
+                            <a href="index.html" class="nav-link" id="">Projeto</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#loja" class="nav-link">Loja</a>
+                            <a href="index.html" class="nav-link">Loja</a>
                         </li>
                         <li class="nav-item">
                             <a href="aspectos-mercadologicos.html" class="nav-link">Administrativo</a>
@@ -86,6 +86,10 @@
                 <hr>
                 <li><img class="icon-folha" src="./img/icon-folha.png"><a href="./identidade-visual.html">Identidade
                         visual</a></li>
+                <hr>
+                <li><img class="icon-folha" src="./img/icon-folha.png"><a href="./prestacao-conta.html">CONTRATO DE
+                        PRESTAÇÃO DE SERVIÇOS
+                    </a></li>
             </ul>
         </div>
 
