--- a/prestacao-conta.html
+++ b/prestacao-conta.html
@@ -48,8 +48,7 @@
                             <a href="index.html" class="nav-link" id="">Projeto</a>
                         </li>
                         <li class="nav-item">
-                            <a href="index.html
-                            " class="nav-link">Loja</a>
+                            <a href="index.html" class="nav-link">Loja</a>
                         </li>
                         <li class="nav-item">
                             <a href="aspectos-mercadologicos.html" class="nav-link">Administrativo</a>
@@ -97,8 +96,7 @@
         <div class="conteudo-adm">
 
 
-            <img class="img-adm" src="./img/administrativo/plano-organizacional.png" alt="">
-            <img class="img-adm" src="./img/administrativo/plano-organizacional2.png" alt="">
+            <embed src="./modelo-contrato.pdf" type="application/pdf" width="100%" height="600px" />
 
 
         </div>
