alterações header, menu mobile e cards gride

--- a/aspectos-mercadologicos.html
+++ b/aspectos-mercadologicos.html
@@ -90,6 +90,9 @@
         <li><img class="icon-folha" src="./img/icon-folha.png"><a href="./prestacao-conta.html">CONTRATO DE
             PRESTAÇÃO DE SERVIÇOS
           </a></li>
+        <hr>
+        <li><img class="icon-folha" src="./img/icon-folha.png"><a href="./layout.html">LAYOUT
+          </a></li>
       </ul>
     </div>
 
