--- a/layout.html
+++ b/layout.html
@@ -48,8 +48,7 @@
                             <a href="index.html" class="nav-link" id="">Projeto</a>
                         </li>
                         <li class="nav-item">
-                            <a href="index.html
-                            " class="nav-link">Loja</a>
+                            <a href="index.html" class="nav-link">Loja</a>
                         </li>
                         <li class="nav-item">
                             <a href="aspectos-mercadologicos.html" class="nav-link">Administrativo</a>
@@ -92,7 +91,7 @@
                         PRESTAÇÃO DE SERVIÇOS
                     </a></li>
                 <hr>
-                <li><img class="icon-folha" src="./img/icon-folha.png"><a href="./layout.html">LAYOUT
+                <li><img class="icon-folha" src="./img/icon-folha.png"><a href="./prestacao-conta.html">LAYOUT
                     </a></li>
             </ul>
         </div>
@@ -100,8 +99,9 @@
         <div class="conteudo-adm">
 
 
-            <img class="img-adm" src="./img/administrativo/plano-organizacional.png" alt="">
-            <img class="img-adm" src="./img/administrativo/plano-organizacional2.png" alt="">
+            <img class="img-adm" src="./img/layout1.jpg" alt="">
+            <img class="img-adm" src="./img/layout2.jpg" alt="">
+            <img class="img-adm" src="./img/layout3.jpg" alt="">
 
 
         </div>
